--- a/public/blogs.html
+++ b/public/blogs.html
@@ -131,6 +131,200 @@
             </div>
           </div>
         </div>
+        <div class="head_adds">
+          <div class="container sub_menu_wrap">
+            <div class="menu_left">
+              <!-- mobile adds -->
+              <div class="menu_adds mob_only">
+                <ul>
+                  <li class="tm_8819">
+                    <a class="ht_location">
+                      <div
+                        class="mobile_menu_icon"
+                        style="background-image: url()"
+                      ></div>
+                      <p>Onlayn Novbe</p>
+                    </a>
+                  </li>
+                  <li class="tm_1251">
+                    <a class="ht_location">
+                      <div
+                        class="mobile_menu_icon"
+                        style="background-image: url('images/ht_location.svg')"
+                      ></div>
+                      <p>ATM ve Filiallar</p>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="exp_nav">
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Kreditler</a>
+                  <ul>
+                    <li>
+                      <a href="#">Istehlak krediti</a>
+                    </li>
+                    <li>
+                      <a href="#">Onlayn kredit</a>
+                    </li>
+                    <li>
+                      <a href="#">Daşınmaz əmlak girov krediti</a>
+                    </li>
+                    <li>
+                      <a href="#">Əmanət təminatlı kredit</a>
+                    </li>
+
+                    <li>
+                      <a href="#">İpoteka krediti</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Kartlar</a>
+                  <ul>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem ipsum dolor sit.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Emanetler</a>
+                  <ul>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Kart Xidmetleri</a>
+                  <ul>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem ipsum dolor sit.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem ipsum dolor sit.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem ipsum dolor sit.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum.</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Pul kocurmeleri</a>
+                  <ul>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Onlayn Xidmetler</a>
+                  <ul>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum .</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum dolor Lorem.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum .</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum .</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem, ipsum .</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Diger Xidmetler</a>
+                  <ul>
+                    <li>
+                      <a href="#">Lorem ipsum dolor sit amet.</a>
+                    </li>
+                    <li>
+                      <a href="#">Lorem ipsum dolor .</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Cashback</a>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Forum</a>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Kredit kalkulyatoru</a>
+                </div>
+                <div class="exp_nav_item">
+                  <a href="#" class="m_nav">Teklif ve iradlar</a>
+                </div>
+              </div>
+            </div>
+            <a
+              href="#"
+              class="menu_right"
+              style="background-image: url('images/pre-sifaris-aze.webp')"
+            >
+            </a>
+          </div>
+        </div>
       </div>
     </header>
     <main>
@@ -142,7 +336,6 @@
             </div>
           </div>
 
-
           <div class="news_link">
             <a
               href="#"
@@ -152,10 +345,25 @@
             >
           </div>
 
-          <button onclick="addPosts()">add to server</button>
+          <button class="addPostModal">Add post to server</button>
         </div>
       </section>
     </main>
+    <div class="post-modal closed">
+      <div class="modal-inner close">
+        <h2>ADD YOUR POST</h2>
+        <label for="">Add title:</label>
+        <input
+          type="text"
+          name=""
+          value="as"
+          id="add_title"
+          class="add-title"
+        />
+        <button type="button" onclick="addPosts()">Add Post</button>
+        <span class="close_modal">X</span>
+      </div>
+    </div>
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
     <script src="../src/js/blogs.js"></script>
   </body>
