--- a/public/index.html
+++ b/public/index.html
@@ -683,7 +683,7 @@
           </div>
           <div class="block_content">
             <div class="col">
-              <div class="col_content app_block" style="">
+              <div class="col_content app_block" >
                 <div class="app_image">
                   <div
                     class="app_phone"
