--- a/public/index.html
+++ b/public/index.html
@@ -591,7 +591,6 @@
                       <p>Mebleg</p>
                       <input
                         type="number"
-                        
                         value="25000"
                         class="range_result "
                         id="money"
@@ -605,8 +604,9 @@
                         max="50000"
                         step="100"
                         value="25000"
-                        onchange="renderer(this.value,'money')"
+                        onchange="renderer(this.value,'money'),calculateLoan()"
                       />
+
                     </div>
 
                     <div class="lc_term lc_item">
@@ -628,7 +628,7 @@
                         max="59"
                         step="1"
                         value="12"
-                        onchange="renderer(this.value,'timee')"
+                        onchange="renderer(this.value,'timee'),calculateLoan()"
 
                       />
                     </div>
@@ -636,7 +636,6 @@
                     <div class="lc_term lc_item lc_percent_for">
                       <p>Illik faiz derecesi</p>
                       <input
-                        
                         type="text"
                         class="range_result "
                         value="9.9"
@@ -650,11 +649,12 @@
                         max="20"
                         step="0.1"
                         value="9.9"
-                        onchange="renderer(this.value,'percentage')"
+                        onchange="renderer(this.value,'percentage'),calculateLoan()"
 
                       />
                     </div>
                   </div>
+
                   <div class="lc_results">
                     <div class="lc_r_self">
                       <div class="lc_r_item">
@@ -778,6 +778,7 @@
                       class="c_int input_value only_number"
                       placeholder="Satiram"
                       id="sell"
+
                     />
                     <select name="" id="" class="s_curr">
                       <option value="azn" selected>AZN</option>
@@ -789,8 +790,8 @@
                     <div class="c_int input_result" id="buy">Aliram</div>
                     <select class="s_curr">
                       <option value="azn">AZN</option>
-                      <option value="usd" selected>USD</option>
-                      <option value="eur">EUR</option>
+                      <option value="usd" >USD</option>
+                      <option value="eur" >EUR</option>
                     </select>
                   </div>
                   <div class="c_result">
