--- a/public/index.html
+++ b/public/index.html
@@ -657,7 +657,7 @@
                         max="20"
                         step="0.1"
                         value="9.9"
-                        onchange="renderer(this.value,'percentage'),calculateLoan()"
+                        onchange="renderer(this.value,'percentage'),calculateLoan(),some()"
                       id="percentRange"
                       />
                     </div>
