--- a/public/blogs.html
+++ b/public/blogs.html
@@ -8,7 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
     /> -->
-    <link rel="stylesheet" href="../src/scss/pages/about/blogs.css" />
+    <link rel="stylesheet" href="../src/scss/pages/blogs/blogs.css" />
   </head>
   <body>
     <header class="top0">
@@ -332,7 +332,7 @@
         <div class="container">
           <div class="block_title">
             <div class="block_heading">
-              <b> Xeberler</b>
+              <h2> Xeberler</h2>
             </div>
           </div>
 
